# hutch

./: .gitignore  LICENSE  Makefile  NOTICE  README.md
doc/: README.org
examples/example-four/: example-four.cpp
examples/example-one/: Makefile  README.org  example-one.cpp
examples/example-three/: Makefile  example-three.cpp
examples/example-two/: Makefile  README.org  example-two.cpp
include/: emulate.hh  hutch-disasm.hpp  hutch.hpp  memstate.hh  pcoderaw.hh  sleigh.hh  space.hh  translate.hh  types.h
lib/: README.org
parser-tools/: slghscan.l  xml.y
processors/8085/: 8085.slaspec
processors/example/: example.sla  example.slaspec  example.xml
sleigh-compiler/: CMakeLists.txt  Makefile  address.cc  address.hh  context.cc  context.hh  filemanage.cc  filemanage.hh  float.cc  float.hh  globalcontext.cc  globalcontext.hh  loadimage.hh  opbehavior.hh  opcodes.cc  opcodes.hh  partmap.hh  pcodecompile.cc  pcodecompile.hh  pcodeparse.hh  pcoderaw.cc  pcoderaw.hh  semantics.cc  semantics.hh  sleigh.cc  sleigh.hh  sleighbase.cc  sleighbase.hh  slgh_compile.cc  slgh_compile.hh  slghparse.tab.hh  slghpatexpress.cc  slghpatexpress.hh  slghpattern.cc  slghpattern.hh  slghscan.l  slghscan.yy.cc  slghsymbol.cc  slghsymbol.hh  space.cc  (+4 more)
src/: Makefile  context.cc  context.hh  emulate.cc  error.hh  float.cc  float.hh  globalcontext.hh  hutch-disasm.cpp  hutch.cpp  memstate.cc  opbehavior.hh  opcodes.cc  opcodes.hh  partmap.hh  pcodecompile.hh  semantics.cc  sleigh.cc  sleigh.hh  sleighbase.cc  sleighexample.cc  slgh_compile.cc  slgh_compile.hh  slghpatexpress.hh  slghpattern.cc  slghpattern.hh  slghsymbol.cc  slghsymbol.hh  space.cc  space.hh  translate.cc  translate.hh  xml.hh
src/SSA/: README.org  heritage.cc
src/SSA/include/: block.hh  heritage.hh
src/Sleigh/: sleigh.cc
src/Sleigh/include/: context.hh  memstate.hh  sleigh.hh
tests/C-lang/: cTest.c
tests/c-lang/: cTest.c
tests/python/: README.org  test.sh  tester.py
tests/python/pyx/: Makefile  cypy_test.pyx  setup.py
